--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,5 +8,11 @@
 	</head>
 	<body>
 		<h1>Get ready to battle!</h1>
+		<p>Type your names in here</p>
+		<form method='post'>
+			<input id='first-player'type='text' placeholder='First player' name='first-person-name'>
+			<input id='second-player'type='text' placeholder='Second player' name='second-person-name'>
+			<input  id='submit-button' type='submit' value='Submit!'>
+		</form>
 	</body>
 </html>
