rearrange views pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,22 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>Get ready to battle!</h1>
+		<h1>Welcome to Battle!</h1>
 		<p>Type your names in here</p>
-		<form method='post'>
-			<input id='first-player'type='text' placeholder='First player' name='first_person_name'>
-			<input id='second-player'type='text' placeholder='Second player' name='second_person_name'>
-			<input  id='submit-button' type='submit' value='Submit!'>
+		<form method="post">
+			<input
+				id="first-player"
+				type="text"
+				placeholder="First player"
+				name="first_person_name"
+			/>
+			<input
+				id="second-player"
+				type="text"
+				placeholder="Second player"
+				name="second_person_name"
+			/>
+			<input id="submit-button" type="submit" value="Submit!" />
 		</form>
 	</body>
 </html>
