--- a/views/turn.ejs
+++ b/views/turn.ejs
@@ -10,11 +10,11 @@
 	<body>
 		<h1>These are the players!</h1>
 		<p>
-			<span><%= `${firstPersonName} ${firstPersonHitPoints}` %></span>
-			<span><%= `${secondPersonName} ${secondPersonHitPoints}`%></span>
+		<%=`The first player is ${firstPersonName}. Total hitpoints: ${firstPersonHitPoints}`%>
 		</p>
+		<p><%=`The second player is ${secondPersonName}. Total hitpoints:  ${secondPersonHitPoints}`%></p>
 		<form action="/attack" method="post">
-			<input id="start-battle-button" type="submit" value="start battle" />
+			<input id="start-attack-button" type="submit" value="start battle" />
 		</form>
 		<p></p>
 	</body>
